k8s/security/23-allow-payment-to-ledger.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-payment-to-ledger
  namespace: payments
spec:
  selector:
    matchLabels:
      app: ledger-api
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/payments/sa/payment-api
      to:
        - operation:
            methods: ["GET"]
            paths: ["/record*", "/healthz", "/readyz"]
